frontend/test/typecheck/error/invalid-idvar-type.fc
void foo() {
    for (float f = 0.0 to 10.0) {}
}
